# alfred

./: .gitignore  README.md
products/alfred/: Makefile  docker-compose.yml
products/alfred/alfred-api/: .gitignore  ALFRED_MISSION.md  CONVENTIONS.md  pyproject.toml
products/alfred/alfred-api/app/: __init__.py  indexer.py  indexer_core.py  main.py  worker.py
products/alfred/alfred-api/app/agents/: architect.py  auditor.py  coder.py  coder_tools.py  reviewer.py  routing.py  tester.py
products/alfred/alfred-api/app/api/routes/: health.py  projects.py  runs.py
products/alfred/alfred-api/app/api/schemas/: projects.py
products/alfred/alfred-api/app/core/: config.py  database.py  llm.py  models.py  ollama.py  opa.py  telemetry.py
products/alfred/alfred-api/app/graph/: dependency_parser.py  dependency_query.py
products/alfred/alfred-api/app/orchestrator/: graph.py  nodes.py  state.py
products/alfred/alfred-api/app/routers/: auth.py
products/alfred/alfred-api/app/routes/: user_routes.py
products/alfred/alfred-api/app/schemas/: auth.py  runs.py  user.py
products/alfred/alfred-api/app/services/: user_service.py
products/alfred/alfred-api/app/utils/: __init__.py  email.py  password.py  ping.py  rut_validator.py
products/alfred/alfred-api/tests/: test_graph.py
products/alfred/alfred-api/tests/unit/: test_email.py  test_health.py  test_llm.py  test_projects.py  test_routing.py  test_rut_validator.py
products/alfred/alfred-ui/: Dockerfile.dev  package-lock.json  package.json
products/alfred/alfred-ui/app/: globals.css  layout.tsx  page.tsx
products/alfred/alfred-ui/components/: CodeViewer.tsx  CostBadge.tsx  PipelineView.tsx  PromptBar.tsx  RunSidebar.tsx
products/alfred/alfred-ui/lib/: api.ts  types.ts
products/alfred/infra/opa/policies/: alfred.rego
products/alfred/infra/pgadmin/: servers.json
products/alfred/infra/postgres/: init.sql
products/alfred/infra/postgres/migrations/: 004_code_dependencies.sql  005_cost_tracking.sql
products/supabase-local/supabase/migrations/: 20260504023754_remote_schema.sql
