[project]
name = "alfred-api"
version = "0.1.0"
description = "Alfred — AI coding assistant backend"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # ── Base de datos ──────────────────────────────────────────────────────────
    "sqlmodel>=0.0.21",          # ORM tipado sobre SQLAlchemy
    "asyncpg>=0.29.0",           # driver async para Postgres
    "pgvector>=0.3.0",           # soporte vectores en SQLModel

    # ── Agentes ───────────────────────────────────────────────────────────────
    "langgraph>=0.2.0",          # orquestador de agentes
    "langchain-ollama>=0.2.0",   # cliente Ollama para LangGraph

    # ── HTTP cliente ──────────────────────────────────────────────────────────
    "httpx>=0.27.0",             # llamadas async a Ollama y OPA

    # ── Validación y configuración ─────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",  # variables de entorno tipadas
    "python-dotenv>=1.0.0",

    # ── Cola de tareas ─────────────────────────────────────────────────────────
    "redis>=5.0.0",

    # ── Observabilidad ─────────────────────────────────────────────────────────
    "structlog>=24.0.0",         # logs estructurados con request_id
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",             # TestClient de FastAPI
    "ruff>=0.4.0",               # linter + formatter
    "mypy>=1.10.0",              # type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]